# under-writer

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: setup.sh  start.sh
src/: app.py
src/chatbot/: responses.py
src/database/: models.py  queries.py
src/utils/: helpers.py
src/vector_db/: faiss_client.py  pinecone_client.py
