[tool.poetry]
name = "gen-ai-insurance-underwriting"
version = "0.1.0"
description = "A chatbot for enhancing risk assessment and policy personalization in insurance underwriting."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
psycopg2 = "^2.9"
pinecone-client = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.0"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"